<?xml version="1.0" encoding="utf-8"?>

<AbsoluteLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lh"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="Deprecated">

    <View
        android:layout_width="0dp"
        android:layout_height="1dp">
    </View>

    <ImageButton
        android:id="@+id/button4"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="10dp"
        android:layout_x="308dp"
        android:layout_y="5dp"
        android:background="@drawable/virasana"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/desc4" />

    <ImageButton
        android:id="@+id/button2"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="10dp"
        android:layout_x="108dp"
        android:layout_y="5dp"
        android:foreground="@drawable/v"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/desc2" />

    <ImageButton
        android:id="@+id/button3"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="10dp"
        android:layout_x="208dp"
        android:layout_y="5dp"
        android:background="@drawable/h"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/desc3" />

    <ImageButton
        android:id="@+id/button1"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_margin="4dp"
        android:layout_marginTop="4dp"
        android:layout_x="8dp"
        android:layout_y="5dp"
        android:background="@drawable/b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/desc1" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp">
    </View>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp">
    </View>

    <ImageView
        android:id="@+id/image"
        android:layout_width="346dp"
        android:layout_height="231dp"
        android:layout_x="23dp"
        android:layout_y="239dp"
        android:adjustViewBounds="true"
        android:src="@drawable/empty_img" />

    <TextView
        android:id="@+id/brief"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_x="9dp"
        android:layout_y="119dp"
        android:gravity="center"
        android:text="@string/brief" />

    <TextView
        android:id="@+id/benefits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_x="1dp"
        android:layout_y="478dp"
        android:gravity="center"
        android:text="@string/benefits" />


</AbsoluteLayout>
